content/boundary/v0.21.x/content/docs/targets/create/tcp/ssh.mdx
---
layout: docs
page_title: Create an SSH TCP target
description: >-
  Learn how to create a TCP target for an SSH host.
---

# Create a TCP target for an SSH host

You can configure a TCP target to authorize a session between the client and end host. Users can connect to remote hosts using SSH, and you can attach brokered credentials to the TCP target to simplify the connection process. Unlike [SSH target types](/boundary/docs/targets/create/ssh), TCP targets cannot use credential injection. Boundary passes any brokered credentials directly back to the client session.

@include 'configuration-reference/enterprise-features/tcp-target-limitations.mdx'

You can configure any networked service available with an address and port as a TCP target. Boundary must have access to the target to start a session. If your service is not publicly available, you will need to [deploy a worker](/boundary/docs/deploy/self-managed/deploy-workers) to give Boundary access to the target network.

The following examples use a direct target address for simplicity, but HashiCorp recommends that you [configure host catalogs and host sets](/boundary/docs/hosts) for scaled production deployments.

Complete the following steps to create a TCP target for an SSH host.

<Tabs>
<Tab heading="Admin Console" group="admin">

1. Log in to Boundary.
1. Select an org, and then select the project where you want to create a target.
1. Select **Targets** under *Project Actions*.
1. Click **New Target**.
1. Complete the following fields:
   - **Name**: (Required) A name for identification purposes.
   The name must be unique.
   - **Description**: (Optional) An optional description of the target for identification purposes.
   - **Type**: (Required) Select **TCP** to create a TCP target.
   - **Target Address** (Optional) If you are not using host catalogs and host sets, you can enter a target address instead to map the target to a single address.
   This must be a valid IP address or DNS name.
   - **Default Port** (Required) The default port on which to connect, such as `22`.
   - **Aliases** (Optional) A globally-scoped unique identifier for the target, which makes the target easier to connect to using the CLI or transparent sessions. If you create an alias, click **Add** to assign it.
1. Click **Save**.

</Tab>
<Tab heading="CLI" group="cli">

1. Log in to Boundary.
1. Set the `BOUNDARY_PROJECT_ID` environment variable, or provide the scope ID (such as `p_1234567890`) in the next step.
1. Use the following command to create a TCP target named `ubuntu-tcp-test` with an alias `ubuntu`, with a direct target address of `10.0.0.20` and a default connection port of `22`:

   ```shell-session
   $ boundary targets create tcp \
     -scope-id $BOUNDARY_PROJECT_ID \
     -name "ubuntu-tcp-test" \
     -with-alias-value "ubuntu" \
     -address "10.0.0.20" \
     -default-port 22
   ```

  You must provide the `scope-id` field when you create a target.

  Refer to the [targets](/boundary/docs/domain-model/targets) domain model documentation for more fields that you can use when you create targets, and the [`targets create`](/boundary/docs/commands/targets/create) command for all the CLI options.

</Tab>
<Tab heading="Terraform" group="terraform">

You can define a target and target alias using the [Boundary Terraform provider](https://registry.terraform.io/providers/hashicorp/boundary/latest):

```hcl
resource "boundary_target" "ubuntu_target" {
  name         = "ubuntu-tcp-test"
  description  = "Ubuntu 20.04 dev server TCP target"
  type         = "tcp"
  address      = "10.0.0.20"
  default_port = "22"
  scope_id     = boundary_scope.project.id
  brokered_application_credential_source_ids = [
    boundary_credential_library_vault.vault_host_cred_library_ubuntu.id
  ]
}

resource "boundary_alias_target" "ubuntu_target_alias" {
  name                      = "ubuntu"
  description               = "Target alias for ubuntu-tcp-test"
  scope_id                  = "global"
  value                     = "ubuntu"
  destination_id            = boundary_target.ubuntu_target.id
}
```

</Tab>
</Tabs>

## Configure a brokered application credential

You can configure a brokered application credential for end users to connect to the target. Brokered credentials are exposed to the end user to allow them to authenticate to a target manually, or using [connect helpers](/boundary/docs/targets/connections/connect-helpers).

@include 'configuration-reference/enterprise-features/tcp-target-no-injection.mdx'

You can configure credentials for the TCP target using:

- Static credentials (`username_password` or `ssh_private_key`)
- Vault generic credential library
- Vault SSH certificate credential library

Refer to the [Configure targets with credential brokering](/boundary/docs/credentials/configure-credential-brokering) page to learn how to configure a target with credential brokering.

## Next steps

To learn how to connect to a target, refer to [Connection workflows](/boundary/docs/targets/connections).

To use target aliases to connect to targets:

1. [Create a target alias](/boundary/docs/targets/configuration/create-target-alias)
1. [Connect to a target using an alias](/boundary/docs/targets/connections/connect-target-alias)
1. After you set up a target alias, you can optionally [Configure transparent sessions for end users](/boundary/docs/targets/configuration/configure-transparent-sessions). <sup>HCP/ENT</sup>